# BearingGuardian

./: .coverage  .env  .gitattributes  .gitignore  1.ipynb  1.py  Gen_Signal_16k_auto.py  README.md  RUL.ipynb  XGBoost_10cla.ipynb  app.py  cnn_history.npy  cnn_lstm_model.h5  commit_message.txt  cwru_rf_pipeline.ipynb  dcase_mel.ipynb  docker-compose.yml  environment.yml  extract_features_from_mat.py  features_from_mat.csv  final.ipynb  finetuning_final.ipynb  generate_enhanced_signal_sr16k.py  label_encoder.pkl  lstm_noise_rul_model.h5  model.ipynb  model_4cla.ipynb  noise_input.py  package-lock.json  pyproject.toml  rawdata.ipynb  sample_data.txt  spark_hdfs_reader.py  transformer_model.h5  vercel.json  wav_to_specto.py  wavchange.ipynb  xgb_snr_checked.pkl  xgboost_4class.pkl  xgboost_4class_balanced.pkl  (+1 more)
anomaly _model/: eda-dcase.ipynb  eda_2d-cnn.ipynb
anomaly_model/: 2d-cnn-lstm-by-spectro-f1.ipynb  Gen_Signal_16k_auto.py  evaluate_sim_data_model_performance.ipynb  stage1_finetuned_model.h5  stage1_tl_best_model_resnet.h5  stage2_finetuned_model.h5  stage2_tl_best_model_resnet.h5  transfer-resnet.ipynb
archiver/: archiver.py
backend/: README.md  core-site.xml  docker-compose.yml  hdfs-site.xml  hive-site.xml  infra_simulator.py  local_data_processor.py  mypy.ini  requirements.txt  test_db_connection.py  test_mypy.py
data/: README.md
db_link/: mysql_config.py  print_tables.py  web_view.py
docs/: README.md  data_flow_diagram.puml  directory_structure_with_comments.md  system_architecture.puml  team_roles_architecture.md  use_case_diagram.puml
(+236 files in other folders)
