[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bearing-guardian"
version = "0.1.0"
description = "Bearing fault prediction system"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/venv/*"] 